--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".Edit"></activity>
+        <activity android:name=".oneRecipe" />
         <activity android:name=".AddRecipe" />
         <activity android:name=".Home" />
         <activity android:name=".Signup" />
